--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -199,7 +199,7 @@ $card-img-width: 200px;
 }
 .search-input-icon.empty:before {
   cursor: pointer;
-  background-image: url(../../../public/img/delete_icon.png);
+  background-image: url(/public/img/delete_icon.png);
 }
 
 /* HITS */
