--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10415,6 +10415,10 @@ a.text-dark:focus {
   }
 }
 
+.navbar-brand {
+  margin-left: 1.8rem;
+}
+
 .row {
   margin-right: initial;
   margin-left: initial;
