--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,6 +14,16 @@
 
 // Our own classes
 
+.navbar-nav .nav-link.button-register{
+  padding: 7px 13px ;
+  background: #003cff;
+  background: -moz-linear-gradient(left, #003cff 0%, #435099 55%, #553390 100%);
+  background: -webkit-linear-gradient(left, #003cff 0%,#435099 55%,#553390 100%);
+  background: linear-gradient(to right, #003cff 0%,#435099 55%,#553390 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003cff', endColorstr='#553390',GradientType=1 );
+  border-radius: 9px;
+  color: white;
+}
 .navbar-brand {
   margin-left: 1.8rem
 ;
