--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10415,6 +10415,79 @@ a.text-dark:focus {
   }
 }
 
+.home-text {
+  padding: 20px;
+}
+
+.home-text,
+.register-bloc {
+  width: 50%;
+}
+
+.boss-student {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.main-home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+hr {
+  width: 1px;
+  height: initial;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  border: 0;
+  border-left: 1px solid #969696;
+}
+
+h1 {
+  color: #003CFF;
+}
+
+h2 {
+  color: #435099;
+}
+
+.boss-student h1 {
+  text-align: center;
+}
+
+.student,
+.boss {
+  padding: 30px;
+}
+
 .navbar-nav .nav-link.button-register {
   padding: 7px 13px;
   background: #003cff;
