--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+@import url("https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro:400,600,700");
 
 // Variables
 @import "variables";
@@ -14,6 +14,15 @@
 
 // Our own classes
 
+.navbar-light .navbar-nav .button-register:hover, .navbar-light .navbar-nav .button-register:focus {
+  color: white;
+  transform: scale(1.1);
+}
+.register-bloc h1{
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background: linear-gradient(to right, #003cff 0%,#435099 55%,#553390 100%);
+}
 .home-text{
   padding:20px;
 }
@@ -35,6 +44,12 @@
   justify-content: space-around;
   align-content: stretch;
   align-items: stretch;
+  width: 80%;
+  margin: 30vh auto;
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 hr{
   width: 1px;
@@ -65,6 +80,7 @@ text-align: center;
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003cff', endColorstr='#553390',GradientType=1 );
   border-radius: 9px;
   color: white;
+  transition: 0.5s all;
 }
 .navbar-brand {
   margin-left: 1.8rem
