--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,8 +42,12 @@ transform: scale(1.04);
 .home-text{
   padding:20px;
 }
-.home-text,.register-bloc {
-  width: 50%;
+.home-text {
+  width: 60%;
+}
+
+.register-bloc {
+  width: 40%;
 }
 .boss-student{
   display: flex;
