--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,107 +13,12 @@
 
 
 // Our own classes
-.register-bloc input, .register-bloc textarea{
-  color: #333333;
-  border-radius: 9999px;
-  height: 45px;
-}
-.register-bloc input::placeholder{
-  color: #BBBBBB;
-}
-.register-bloc button{
-  color: white;
-  border-radius: 9999px;
-  height: 50px;
-  background: #003cff;
-  background: -moz-linear-gradient(left, #003cff 0%, #435099 55%, #553390 100%);
-  background: -webkit-linear-gradient(left, #003cff 0%,#435099 55%,#553390 100%);
-  background: linear-gradient(to right, #003cff 0%,#435099 55%,#553390 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003cff', endColorstr='#553390',GradientType=1 );
-  transition: 0.5s all;
-}
-.register-bloc button:hover{
-transform: scale(1.04);
-}
-.navbar-light .navbar-nav .button-register:hover, .navbar-light .navbar-nav .button-register:focus {
-  color: white;
-  transform: scale(1.1);
-}
-.home-text{
-  padding:20px;
-}
-.home-text {
-  width: 60%;
-}
 
-.register-bloc {
-  width: 40%;
-}
-.boss-student{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  align-content: stretch;
-  align-items: stretch;
-}
-.main-home{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  align-content: stretch;
-  align-items: stretch;
-  width: 80%;
-  margin: 30vh auto;
-  background-color: white;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-}
-hr{
-  width: 1px;
-  height: initial;
-  margin-top: 10%;
-  margin-bottom: 10%;
-  border: 0;
-  border-left: 1px solid rgb(150, 150, 150);
-}
-h1{
-  color:#003CFF;
-}
-h2{
-  color:#435099;
-}
-.boss-student h1{
-text-align: center;
-}
-.student,.boss{
-  padding: 30px;
-}
-.navbar-nav .nav-link.button-register{
-  padding: 7px 13px ;
-  background: #003cff;
-  background: -moz-linear-gradient(left, #003cff 0%, #435099 55%, #553390 100%);
-  background: -webkit-linear-gradient(left, #003cff 0%,#435099 55%,#553390 100%);
-  background: linear-gradient(to right, #003cff 0%,#435099 55%,#553390 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003cff', endColorstr='#553390',GradientType=1 );
-  border-radius: 9px;
-  color: white;
-  transition: 0.5s all;
-}
-.navbar-brand {
-  margin-left: 1.8rem;
-}
+@import "files/global";
+@import "files/tools";
+@import "files/navbar";
+@import "files/home";
 
-nav {
-  font-family: "Montserrat Light", "DejaVu Sans", sans-serif;
-}
-
-.row {
-  margin-right: initial;
-  margin-left: initial;
-}
 
 .offer-link {
   display: block;
@@ -161,6 +66,9 @@ nav {
   right: 3px;
   position: relative;
 }
+
+
+
 
 // Algolia section
 
