--- a/resources/assets/sass/files/navbar.scss
+++ b/resources/assets/sass/files/navbar.scss
@@ -13,17 +13,21 @@
   color: white;
   transition: 0.5s all;
 }
-.navbar-brand {
-  margin-left: 1rem;
-  display: inline-block;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-  margin-right: 1rem;
-  font-size: 1.25rem;
-  line-height: inherit;
-  white-space: nowrap;
+.navbar-light .navbar-nav .button-register:hover {
+  color: #e2f1ff;
 }
 
-nav {
-  font-family: "Montserrat Light", "DejaVu Sans", sans-serif;
-}
+  .navbar-brand {
+    margin-left: 1rem;
+    display: inline-block;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
+  }
+
+  nav {
+    font-family: "Montserrat Light", "DejaVu Sans", sans-serif;
+  }
