--- a/resources/assets/sass/files/global.scss
+++ b/resources/assets/sass/files/global.scss
@@ -33,3 +33,14 @@ p {
     display: none;
   }
 }
+
+body {
+  margin: 0;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #212529;
+  text-align: left;
+  background-color: initial;
+}
