--- a/resources/assets/sass/files/home.scss
+++ b/resources/assets/sass/files/home.scss
@@ -2,6 +2,17 @@
   margin-top: -35px;
   background-image: url("/img/banner.png");
   height: 47vh;
+  position: relative;
+  z-index: -10;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.13) 10%, white 100%);
+  }
 }
 .register-bloc {
   padding: 15px;
@@ -21,8 +32,6 @@
   border-radius: 9999px;
   height: 50px;
   background: #003cff;
-  background: -moz-linear-gradient(left, #003cff 0%, #435099 55%, #553390 100%);
-  background: -webkit-linear-gradient(left, #003cff 0%,#435099 55%,#553390 100%);
   background: linear-gradient(to right, #003cff 0%,#435099 55%,#553390 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003cff', endColorstr='#553390',GradientType=1 );
   transition: 0.5s all;
@@ -38,7 +47,7 @@
 }
 .register-bloc-container {
   position: sticky;
-  top: calc(20% + 20px);
+  top: calc(20% + 90px);
   transform: translateY(-33%);
   background-color: white;
   padding: 15px;
@@ -60,6 +69,12 @@
 }
 .home-text p {
   margin-bottom: 20px;
+}
+
+.home-text h1 {
+  background: -webkit-linear-gradient(right, #003CFF, #553390);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .main-home{
@@ -102,12 +117,15 @@
 
 @media screen and (max-width: $responsive-breakpoint) {
   .register-bloc-container {
+    transform: translateY(0);
     box-shadow: none;
+    position: static;
   }
   .home-text {
     width: 100%;
   }
   .register-bloc {
+    max-width: initial;
     width: 100%;
   }
   .main-home {
