--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:300|Lato|Source+Sans+Pro:400,600,700);@import url(https://fonts.googleapis.com/icon?family=Material+Icons);/*!
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400|Lato|Source+Sans+Pro:400,600,700);@import url(https://fonts.googleapis.com/icon?family=Material+Icons);/*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -10415,6 +10415,11 @@ a.text-dark:focus {
   }
 }
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 hr {
   width: 1px;
   height: initial;
@@ -10579,7 +10584,7 @@ nav {
   z-index: -10;
 }
 
-.banner:before {
+.banner::before {
   content: '';
   position: absolute;
   top: 0;
@@ -10745,8 +10750,37 @@ nav {
   }
 }
 
+.search-intro {
+  width: 100%;
+  text-align: center;
+  height: 30vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-intro h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+.search-input input {
+  font-size: 28px;
+  font-weight: 100;
+  padding: 10px 0 6px;
+  border: none;
+  border-bottom: 5px solid #eee;
+}
+
 .search-input {
   margin: 0 auto;
+  padding: 10px 20px 6px;
   width: 80%;
 }
 
@@ -10816,6 +10850,11 @@ nav {
 
 .card-text {
   color: black;
+  padding-right: 10px;
+  line-height: 0.8;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-top: 10%;
 }
 
 .card-text h3 {
@@ -10857,10 +10896,6 @@ nav {
   margin: 50px auto;
 }
 
-.facets {
-  width: 30%;
-}
-
 .entries {
   width: 70%;
 }
@@ -10875,6 +10910,88 @@ nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.facets {
+  width: 25%;
+  min-width: 280px;
+  -webkit-box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.75);
+  padding: 10px;
+  position: relative;
+  border-radius: 7px;
+}
+
+.facets::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background: -webkit-gradient(linear, left top, right top, from(#003cff), to(#553390));
+  background: linear-gradient(to right, #003cff 0%, #553390 100%);
+  border-radius: 7px 7px 0 0;
+}
+
+.facets > div {
+  margin-bottom: 2rem;
+}
+
+.facet-title {
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 1rem 0.5rem;
+}
+
+.ais-refinement-list--checkbox {
+  display: none;
+}
+
+.ais-refinement-list--label {
+  margin: 0 0.5rem;
+  color: #6473a5;
+}
+
+.ais-refinement-list--label:hover,
+.ais-menu--link:hover,
+.ais-menu--item__active .ais-menu--link,
+.ais-hierarchical-menu--list .facet-item.active:hover,
+.ais-hierarchical-menu--list .facet-item.active {
+  color: #6487ff;
+}
+
+.ais-refinement-list--item__active .ais-refinement-list--label {
+  color: #395bff;
+}
+
+.ais-refinement-list--item__active .ais-refinement-list--label:hover,
+.ais-menu--item__active .ais-menu--link:hover,
+.ais-hierarchical-menu--list .facet-item.active:hover {
+  text-decoration: line-through;
+  color: #1a38ff;
+}
+
+.ais-refinement-list--count,
+.ais-hierarchical-menu--count,
+.ais-menu--count,
+.ais-star-rating--count,
+.ais-toggle--count {
+  position: relative;
+  color: #6473a5;
+  padding: 0px 10px;
+  border-radius: 99px;
+  background-color: #f0f1f6;
+  margin-left: 0.2rem;
+}
+
+.ais-refinement-list--label,
+.ais-hierarchical-menu--list .facet-item,
+.ais-menu--link,
+.ais-price-ranges--item {
+  cursor: pointer;
+  line-height: 1.5em;
 }
 
 * {
@@ -11176,14 +11293,6 @@ textarea {
   max-width: 23%;
 }
 
-.search-input input {
-  font-size: 28px;
-  font-weight: 100;
-  padding: 10px 0 6px;
-  border: none;
-  border-bottom: 5px solid #eee;
-}
-
 .search-input input,
 .search-input input:focus {
   -webkit-transition: border-color .3s ease-in;
@@ -11465,14 +11574,6 @@ textarea {
   content: "\F107";
 }
 
-.ais-refinement-list--label,
-.ais-hierarchical-menu--list .facet-item,
-.ais-menu--link,
-.ais-price-ranges--item {
-  cursor: pointer;
-  line-height: 1.5em;
-}
-
 .ais-hierarchical-menu--list .ais-hierarchical-menu--item {
   margin: 3px 0;
 }
@@ -11482,43 +11583,6 @@ textarea {
   font: normal normal normal 14px/1 FontAwesome;
   content: "\F105";
   padding: 0 5px 0 0;
-}
-
-.sffv_no-results {
-  font-size: 13px;
-  line-height: 1.2;
-  padding-top: 6px;
-}
-
-.ais-refinement-list--label:hover,
-.ais-refinement-list--item__active .ais-refinement-list--label,
-.ais-menu--link:hover,
-.ais-menu--item__active .ais-menu--link,
-.ais-hierarchical-menu--list .facet-item.active:hover,
-.ais-hierarchical-menu--list .facet-item.active {
-  color: #ed5565;
-}
-
-.ais-refinement-list--item__active .ais-refinement-list--label:hover,
-.ais-menu--item__active .ais-menu--link:hover,
-.ais-hierarchical-menu--list .facet-item.active:hover {
-  text-decoration: line-through;
-  color: #ed5565;
-}
-
-.ais-refinement-list--count,
-.ais-hierarchical-menu--count,
-.ais-menu--count,
-.ais-star-rating--count,
-.ais-toggle--count {
-  position: relative;
-  top: 3px;
-  float: right;
-  color: #999;
-}
-
-#type.facet .ais-refinement-list--checkbox {
-  display: none;
 }
 
 /* NO RESULTS */
