--- a/resources/assets/sass/files/home.scss
+++ b/resources/assets/sass/files/home.scss
@@ -4,7 +4,7 @@
   height: 47vh;
   position: relative;
   z-index: -10;
-  &:before {
+  &::before {
     content: '';
     position: absolute;
     top: 0;
