--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400|Lato|Source+Sans+Pro:400,600,700);@import url(https://fonts.googleapis.com/icon?family=Material+Icons);/*!
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400|Lato|Source+Sans+Pro:400,600,700);@import url(https://use.fontawesome.com/releases/v5.0.13/css/all.css);@import url(https://fonts.googleapis.com/icon?family=Material+Icons);/*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -10770,22 +10770,61 @@ nav {
   font-weight: 400;
 }
 
-.search-input input {
-  font-size: 28px;
-  font-weight: 100;
-  padding: 10px 0 6px;
-  border: none;
-  border-bottom: 5px solid #eee;
+.search-input {
+  width: 100%;
 }
 
-.search-input {
+.search-input .search-box {
   margin: 0 auto;
   padding: 10px 20px 6px;
-  width: 80%;
+  width: 70%;
+  border-radius: 9999px;
+  font-size: 28px;
+  font-weight: 100;
+  border: none;
+  display: block;
 }
 
-.search-box {
+.search-container {
   width: 100%;
+  position: relative;
+}
+
+.search-container::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: -webkit-gradient(linear, left top, right top, from(#003cff), to(#553390));
+  background: linear-gradient(to right, #003cff 0%, #553390 100%);
+  width: calc(70% + 12px);
+  height: 120%;
+  z-index: -10;
+  border-radius: 999px;
+}
+
+.ais-search-box--reset-wrapper {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  display: block;
+  position: absolute;
+  right: 17%;
+  top: 29%;
+}
+
+.ais-search-box-reset {
+  cursor: pointer;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  background-color: initial;
+  border: initial;
+  color: initial;
+  width: 25px;
+  fill: #bfc7d8;
 }
 
 .studentcard {
@@ -10811,11 +10850,11 @@ nav {
 
 .studentcard .portrait {
   border-radius: 9999px;
-  height: 60%;
+  height: 70%;
   -o-object-fit: cover;
      object-fit: cover;
   background-color: white;
-  margin: auto 2rem;
+  margin: auto 1.3rem;
 }
 
 .studentcard > .informations {
@@ -10984,6 +11023,7 @@ nav {
   border-radius: 99px;
   background-color: #f0f1f6;
   margin-left: 0.2rem;
+  font-size: 0.9rem;
 }
 
 .ais-refinement-list--label,
@@ -10992,6 +11032,119 @@ nav {
 .ais-price-ranges--item {
   cursor: pointer;
   line-height: 1.5em;
+}
+
+.ais-current-refined-values {
+  position: relative;
+}
+
+.ais-show-more {
+  font-weight: bold;
+  opacity: .7;
+  padding-left: 4px;
+  position: relative;
+  line-height: 25px;
+  font-size: .9em;
+  cursor: pointer;
+  color: #6473a5;
+}
+
+.ais-show-more:hover,
+.ais-show-more:focus {
+  opacity: 1;
+}
+
+.ais-show-more:before {
+  font-family: "Font Awesome 5 Free";
+  font-style: inherit;
+  font-weight: inherit;
+  text-decoration: inherit;
+  display: inline-block;
+  position: relative;
+  content: '';
+  margin: 0 5px 0 0;
+}
+
+.ais-show-more__inactive:before {
+  content: "\F107";
+}
+
+.ais-show-more__active:before {
+  content: "\F106";
+}
+
+.algolia-logo {
+  height: 20px;
+}
+
+.algolia-link {
+  margin-top: 5px;
+  position: absolute;
+  right: 17%;
+}
+
+.algolia-link-container {
+  position: relative;
+}
+
+.search-pagination {
+  margin-top: 60px;
+}
+
+.search-pagination ul {
+  font-size: 0;
+  list-style-type: none;
+  text-align: center;
+}
+
+.search-pagination li {
+  font-size: 14px;
+  display: inline;
+}
+
+.search-pagination a,
+.search-pagination span {
+  padding: 8px 12px;
+  text-decoration: none;
+  color: #000;
+  border: 1px solid #eee;
+}
+
+.search-pagination a:hover {
+  background: #f5f5f5;
+}
+
+.search-pagination li:first-child a {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.search-pagination li:last-child a {
+  border-right: 1px solid #eee;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.search-pagination li.ais-pagination--item__active a {
+  color: white;
+  border-color: #3164ff;
+  background: #3164ff;
+}
+
+.search-pagination li.ais-pagination--item__active a:hover {
+  cursor: default;
+}
+
+.search-pagination li.ais-pagination--item__disabled a,
+.search-pagination li.ais-pagination--item__disabled span {
+  background-color: #eaeaea;
+  border-color: #bbb;
+  color: #888;
+  cursor: not-allowed;
+}
+
+.search-pagination li.ais-pagination--item__disabled a:hover {
+  background: none;
 }
 
 * {
@@ -11215,43 +11368,9 @@ textarea {
   padding: 0;
 }
 
-.ais-search-box--reset-wrapper {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-}
-
-.ais-search-box-reset {
-  cursor: pointer;
-  margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: initial;
-  border: initial;
-  color: initial;
-  width: 25px;
-  fill: #bfc7d8;
-  top: calc(50% - 12px/2);
-  right: 40px;
-  position: relative;
-}
-
 .ais-search-box--powered-by {
   display: inline-block;
   margin-left: 25px;
-}
-
-.algolia-logo {
-  height: 20px;
-}
-
-.algolia-link {
-  margin-top: 5px;
-  position: absolute;
-  right: 10px;
-}
-
-.algolia-link-container {
-  position: relative;
 }
 
 /* GENERAL */
@@ -11416,63 +11535,6 @@ textarea {
   color: #868686;
   margin: 1px 0 10px 0;
   font-size: 14px;
-}
-
-/* PAGINATION */
-
-#pagination {
-  margin-top: 60px;
-}
-
-#pagination ul {
-  font-size: 0;
-  list-style-type: none;
-  text-align: center;
-}
-
-#pagination li {
-  font-size: 14px;
-  display: inline;
-}
-
-#pagination a {
-  padding: 8px 12px;
-  text-decoration: none;
-  color: #000;
-  border: 1px solid #eee;
-}
-
-#pagination a:hover {
-  background: #f5f5f5;
-}
-
-#pagination li:first-child a {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-#pagination li:last-child a {
-  border-right: 1px solid #eee;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-#pagination li.ais-pagination--item__active a {
-  color: white;
-  border-color: #ed5565;
-  background: #ed5565;
-}
-
-#pagination li.ais-pagination--item__active a:hover {
-  cursor: default;
-}
-
-#pagination li.ais-pagination--item__disabled a {
-  cursor: not-allowed;
-}
-
-#pagination li.ais-pagination--item__disabled a:hover {
-  background: none;
 }
 
 /* SORT BY */
@@ -11655,120 +11717,9 @@ a.clear-all:hover {
   border-color: #999;
 }
 
-/* SLIDER */
-
-.ais-range-slider--target {
-  margin: 40px 30px 50px 0;
-  font-size: 13px;
-}
-
-.ais-range-slider--connect {
-  background: #ed5565;
-}
-
-.ais-range-slider--handle {
-  border-color: #ed5565;
-}
-
-.ais-body.ais-range-slider--body {
-  left: 10px;
-  position: relative;
-}
-
-/* Star Rating */
-
-.ais-star-rating--star,
-.ais-star-rating--star__empty {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-}
-
-.ais-star-rating--star:before {
-  content: '\2605';
-  color: #FBAE00;
-}
-
-.ais-star-rating--star__empty:before {
-  content: '\2606';
-  color: #FBAE00;
-}
-
-.ais-star-rating--link__disabled .ais-star-rating--star:before,
-.ais-star-rating--link__disabled .ais-star-rating--star__empty:before {
-  color: #C9C9C9;
-}
-
-/* Price Ranges */
-
-.ais-price-ranges--form {
-  margin-top: 8px;
-}
-
-.ais-price-ranges--currency {
-  display: inline-block;
-  margin-right: 4px;
-}
-
-.ais-price-ranges--input {
-  display: inline-block;
-  width: 50px;
-  border-radius: 2px;
-  border: solid 1px #ccc;
-  font-weight: normal;
-  font-size: 15px;
-}
-
-.ais-price-ranges--button {
-  padding: 4px 7px;
-  display: inline-block;
-  margin: 0 0 0 6px;
-}
-
 /* Toggle */
 
 .ais-toggle--label {
   cursor: pointer;
-}
-
-/* RefinementList ShowMore */
-
-.ais-show-more {
-  font-weight: bold;
-  opacity: .7;
-  padding-left: 4px;
-  position: relative;
-  line-height: 25px;
-  font-size: .9em;
-}
-
-.ais-show-more:hover,
-.ais-show-more:focus {
-  opacity: 1;
-}
-
-.ais-show-more:before {
-  font-family: FontAwesome;
-  font-style: inherit;
-  font-weight: inherit;
-  text-decoration: inherit;
-  display: inline-block;
-  position: relative;
-  content: '';
-  margin: 0 5px 0 0;
-}
-
-.ais-show-more__inactive:before {
-  content: "\F0FE";
-}
-
-.ais-show-more__active:before {
-  content: "\F146";
-}
-
-/* Active filters */
-
-.ais-current-refined-values {
-  position: relative;
 }
 
