--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,7 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400|Lato|Source+Sans+Pro:400,600,700");
+@import url("https://use.fontawesome.com/releases/v5.0.13/css/all.css");
 
 // Variables
 @import "variables";
@@ -88,42 +89,9 @@
   padding: 0;
 }
 
-.ais-search-box--reset-wrapper {
-  box-sizing: content-box;
-}
-
-.ais-search-box-reset {
-  cursor: pointer;
-  margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: initial;
-  border: initial;
-  color: initial;
-  width: 25px;
-  fill: #bfc7d8;
-  top: calc(50% - 12px/2);
-  right: 40px;
-  position: relative;
-}
-
 .ais-search-box--powered-by {
   display: inline-block;
   margin-left: 25px;
-}
-
-.algolia-logo {
-  height: 20px;
-}
-
-.algolia-link {
-  margin-top: 5px;
-  position: absolute;
-  right: 10px;
-}
-
-.algolia-link-container {
-  position: relative;
 }
 
 /* GENERAL */
@@ -265,52 +233,6 @@
   color: #868686;
   margin: 1px 0 10px 0;
   font-size: 14px;
-}
-
-/* PAGINATION */
-#pagination {
-  margin-top: 60px;
-}
-#pagination ul {
-  font-size: 0;
-  list-style-type: none;
-  text-align: center;
-}
-#pagination li {
-  font-size: 14px;
-  display: inline;
-}
-#pagination a {
-  padding: 8px 12px;
-  text-decoration: none;
-  color: #000;
-  border: 1px solid #eee;
-}
-#pagination a:hover {
-  background: #f5f5f5;
-}
-#pagination li:first-child a {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-#pagination li:last-child a {
-  border-right: 1px solid #eee;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-#pagination li.ais-pagination--item__active a {
-  color: white;
-  border-color: #ed5565;
-  background: #ed5565;
-}
-#pagination li.ais-pagination--item__active a:hover {
-  cursor: default;
-}
-#pagination li.ais-pagination--item__disabled a {
-  cursor: not-allowed;
-}
-#pagination li.ais-pagination--item__disabled a:hover {
-  background: none;
 }
 
 /* SORT BY */
@@ -479,114 +401,7 @@ a.clear-all:hover {
   border-color: #999;
 }
 
-/* SLIDER */
-.ais-range-slider--target {
-  margin: 40px 30px 50px 0;
-  font-size: 13px;
-}
-
-.ais-range-slider--connect {
-  background: #ed5565;
-}
-
-.ais-range-slider--handle {
-  border-color: #ed5565;
-}
-
-.ais-body.ais-range-slider--body {
-  left: 10px;
-  position: relative;
-}
-
-/* Star Rating */
-.ais-star-rating--star,
-.ais-star-rating--star__empty {
-  display: inline-block;
-  width: 1em;
-  height: 1em
-}
-
-.ais-star-rating--item__active {
-
-}
-
-.ais-star-rating--star:before {
-  content: '\2605';
-  color: #FBAE00
-}
-
-.ais-star-rating--star__empty:before {
-  content: '\2606';
-  color: #FBAE00
-}
-
-.ais-star-rating--link__disabled .ais-star-rating--star:before,.ais-star-rating--link__disabled .ais-star-rating--star__empty:before {
-  color: #C9C9C9
-}
-
-
-/* Price Ranges */
-.ais-price-ranges--form {
-  margin-top: 8px;
-}
-.ais-price-ranges--currency {
-  display: inline-block;
-  margin-right: 4px;
-}
-
-.ais-price-ranges--input {
-  display: inline-block;
-  width: 50px;
-  border-radius: 2px;
-  border: solid 1px #ccc;
-  font-weight: normal;
-  font-size: 15px;
-}
-
-.ais-price-ranges--button {
-  padding: 4px 7px;
-  display: inline-block;
-  margin: 0 0 0 6px;
-}
-
 /* Toggle */
 .ais-toggle--label {
   cursor: pointer;
-}
-
-/* RefinementList ShowMore */
-.ais-show-more {
-  font-weight: bold;
-  opacity: .7;
-  padding-left: 4px;
-  position: relative;
-  line-height: 25px;
-  font-size: .9em;
-}
-.ais-show-more:hover,
-.ais-show-more:focus {
-  opacity: 1;
-}
-.ais-show-more:before {
-  font-family: FontAwesome;
-  font-style: inherit;
-  font-weight: inherit;
-  text-decoration: inherit;
-  display: inline-block;
-  position: relative;
-  content: '';
-  margin: 0 5px 0 0;
-}
-
-.ais-show-more__inactive:before {
-  content: "\f0fe";
-}
-
-.ais-show-more__active:before {
-  content: "\f146";
-}
-
-/* Active filters */
-.ais-current-refined-values {
-  position: relative;
 }
